--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ SECRET_KEY_ONE=thisisasecretcookiekey
 SECRET_KEY_TWO=thisisanothersecretcookiekey
 CLIENT_URL=http://localhost:3000
 REDIS_HOST=redis://localhost:6379
+CLOUD_NAME=dt3jd6aig
+CLOUD_API_KEY=159956458974296
+CLOUD_API_SECRET=072KeqHd8IxWhZCVWQ382EJQfjU
